--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
 }
 
+/* font-family : Miama , sans-serif;
+font-style : italic */
+
 body {
+  font-family: 'Inter', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 900px;
+  font-style: normal;
   background-color: black;
   color: white;
 }
@@ -17,7 +26,8 @@ body {
   border-radius: 15px;
   border: none;
   font-weight: 700px;
-  background-color: rgb(235, 93, 41);
+  border-radius: 46px;
+  background: rgb(230, 83, 60);
   color: white;
   font-size: 1.3rem;
 }
@@ -26,14 +36,32 @@ body {
   width: auto;
   height: auto;
   padding: 10px;
-  border-radius: 15px;
   font-weight: 700px;
-  background-color: gray;
   color: white;
+  background-color: black;
   font-size: 1.3rem;
+  box-sizing: border-box;
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 40px;
 }
-/* shared style  end */
-/* Heder style strat  */
+
+/* header section style start */
+
+.header-container {
+  max-width: 100%;
+  height: 715px;
+  background: linear-gradient(
+    180deg,
+    rgb(17, 17, 17),
+    rgba(119, 119, 119, 0) 100%
+  );
+}
+
+.header-content {
+  max-width: 80%;
+  margin: 0 auto;
+  padding-top: 30px;
+}
 
 /* nav item style start  */
 .nav-container {
@@ -44,7 +72,8 @@ body {
 
 .logo {
   font-size: 2rem;
-  color: orange;
+  color: rgb(230, 83, 60);
+  font-style: italic;
   font-weight: 800px;
 }
 .nav-items {
@@ -62,3 +91,87 @@ body {
   list-style: none;
 }
 /* nav item  style end  */
+/*banner style start*/
+.banner-container {
+  max-width: 80%;
+  height: 500px;
+  margin: 70px auto;
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.banner-text {
+  width: 600px;
+  height: 440px;
+}
+
+.banner-titel {
+  width: 520px;
+  position: static;
+  line-height: 80px;
+  height: 282px;
+  font-size: 4.5rem;
+}
+#font-miama {
+  font-family: Miama, sans-serif;
+  font-style: italic;
+}
+
+#banner-description {
+  width: 520px;
+  height: auto;
+  color: rgba(255, 255, 255, 0.5);
+}
+.btn-items {
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.banner-img-container {
+  width: 500px;
+  position: relative;
+  margin-right: 100px;
+}
+.banner-img {
+  width: 350px;
+  height: 580px;
+  margin-left: 120px;
+  margin-top: -100px;
+  position: relative;
+  margin-right: 100px;
+}
+
+.box-1,
+.box-2 {
+  width: 193px;
+  height: 98px;
+  box-sizing: border-box;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 12px;
+  backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.div-ball {
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  background-color: orangered;
+}
+.box-1 {
+  margin-top: -450px;
+  margin-left: 230px;
+  padding: 15px;
+}
+
+.box-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: -170px;
+  margin-right: 1500px;
+}
