--- a/style/style.css
+++ b/style/style.css
@@ -4,10 +4,6 @@
   margin: 0;
   padding: 0;
 }
-
-/* font-family : Miama , sans-serif;
-font-style : italic */
-
 body {
   font-family: 'Inter', sans-serif;
   font-optical-sizing: auto;
@@ -16,9 +12,14 @@ body {
   background-color: black;
   color: white;
 }
-
+header {
+  background: linear-gradient(
+    180deg,
+    rgb(17, 17, 17),
+    rgba(119, 119, 119, 0) 100%
+  );
+}
 /* shared style strat  */
-
 .btn-primary {
   width: auto;
   height: auto;
@@ -31,7 +32,6 @@ body {
   color: white;
   font-size: 1.3rem;
 }
-
 .white-btn {
   width: auto;
   height: auto;
@@ -45,26 +45,10 @@ body {
   border-radius: 40px;
 }
 
-/* header section style start */
-
-.header-container {
-  max-width: 100%;
-  height: 715px;
-  background: linear-gradient(
-    180deg,
-    rgb(17, 17, 17),
-    rgba(119, 119, 119, 0) 100%
-  );
-}
-
-.header-content {
-  max-width: 80%;
-  margin: 0 auto;
-  padding-top: 30px;
-}
-
 /* nav item style start  */
 .nav-container {
+  max-width: 1400px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -90,25 +74,24 @@ body {
 .nav-items li {
   list-style: none;
 }
-/* nav item  style end  */
-/*banner style start*/
+.bars-icon {
+  display: none;
+}
+
 .banner-container {
-  max-width: 80%;
-  height: 500px;
-  margin: 70px auto;
+  max-width: 100%;
+}
+.banner-content {
+  max-width: 1400px;
+  margin: 50px auto;
   display: flex;
-  justify-content: center;
   justify-content: space-between;
-  align-items: center;
 }
-
 .banner-text {
-  width: 600px;
-  height: 440px;
+  margin-top: 80px;
 }
-
 .banner-titel {
-  width: 520px;
+  max-width: 520px;
   position: static;
   line-height: 80px;
   height: 282px;
@@ -127,21 +110,7 @@ body {
 .btn-items {
   display: flex;
   gap: 10px;
-  margin-top: 20px;
-}
-
-.banner-img-container {
-  width: 500px;
-  position: relative;
-  margin-right: 100px;
-}
-.banner-img {
-  width: 350px;
-  height: 580px;
-  margin-left: 120px;
-  margin-top: -100px;
-  position: relative;
-  margin-right: 100px;
+  margin-top: 40px;
 }
 
 .box-1,
@@ -162,16 +131,91 @@ body {
   background-color: orangered;
 }
 .box-1 {
-  margin-top: -450px;
-  margin-left: 230px;
   padding: 15px;
+  margin-top: -420px;
+  margin-left: 250px;
 }
-
 .box-2 {
+  margin-top: 150px;
+  margin-left: -120px;
   display: flex;
   justify-content: center;
   align-items: center;
   justify-content: space-around;
-  margin-top: -170px;
-  margin-right: 1500px;
+}
+
+.habit-section {
+  max-width: 1400px;
+  height: auto;
+  margin: 150px auto;
+  text-align: center;
+}
+
+#titel-habit {
+  font-size: 3.5rem;
+}
+
+#habit-description {
+  font-size: 1.5rem;
+  color: gray;
+  width: 700px;
+  text-align: center;
+  margin: 20px auto;
+}
+
+.habit-container {
+  display: grid;
+  margin-top: 70px;
+  grid-template-columns: repeat(4, 1fr);
+}
+.img-box {
+  margin: 0 auto;
+  width: 220px;
+}
+.img-box h3 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.img-box img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+}
+
+.runbox-section {
+  width: 1200px;
+  height: auto;
+  border: 1px solid;
+  margin: 20px auto;
+  border-radius: 18px;
+  background: rgb(34, 34, 34);
+}
+
+.runbox-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px auto;
+  padding: 0 30px;
+}
+
+.runbox-text {
+  width: 40%;
+}
+
+.runbox-img {
+  width: 40%;
+}
+
+#box-titel {
+  font-size: 4rem;
+  margin-bottom: 20px;
+}
+#box-description {
+  font-size: 1.2rem;
+  color: lightgray;
+  margin-bottom: 20px;
+}
+.runbox-img img {
+  width: 100%;
+  border-radius: 20px;
 }
