--- a/style/responsive.css
+++ b/style/responsive.css
@@ -128,7 +128,7 @@
   }
 
   .input-form input {
-    width: 50%;
+    width: 70%;
     height: 30px;
     font-size: 0.8rem;
   }
@@ -147,5 +147,19 @@
   td {
     font-size: 1rem;
     padding: 10px 10px;
+  }
+
+  .meet-header h1 {
+    font-size: 2rem;
+  }
+  .meet-header p {
+    width: 270px;
+    margin: 0 auto;
+    font-size: 0.8rem;
+  }
+
+  .meet-container {
+    width: fit-content;
+    grid-template-columns: repeat(1, 1fr);
   }
 }
