--- a/style/style.css
+++ b/style/style.css
@@ -328,3 +328,54 @@ table {
 .bmi-input {
   width: 40%;
 }
+
+.meet-section {
+  width: 100%;
+  height: auto;
+  margin-top: 100px;
+}
+
+.meet-header {
+  text-align: center;
+}
+
+.meet-header h1 {
+  font-size: 3rem;
+  margin-bottom: 20px;
+}
+.meet-header p {
+  font-size: 1rem;
+  color: gray;
+}
+
+.meet-container {
+  width: 1200px;
+  height: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  margin: 40px auto;
+  padding: 15px;
+  border-radius: 18px;
+  background: rgba(255, 255, 255, 0.1);
+}
+.meet-text {
+  position: relative;
+  left: 20px;
+  top: -60px;
+}
+
+.meet-text p {
+  color: gray;
+}
+
+.meet-images {
+  position: static;
+  width: auto;
+  height: auto;
+}
+.meet-images img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
